// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-avo-inspector destination: trackSchemaFromEvent action - all fields 1`] = `
Array [
  Object {
    "appName": "pSOgGM!1GLRLe4w6",
    "appVersion": "pSOgGM!1GLRLe4w6",
    "createdAt": "pSOgGM!1GLRLe4w6",
    "eventHash": null,
    "eventId": null,
    "eventName": "pSOgGM!1GLRLe4w6",
    "eventProperties": Array [
      Object {
        "propertyName": "testType",
        "propertyType": "string",
      },
    ],
    "libPlatform": "Segment",
    "libVersion": "1.0.0",
    "messageId": "pSOgGM!1GLRLe4w6",
    "sessionId": "_",
    "type": "event",
  },
]
`;

exports[`Testing snapshot for actions-avo-inspector destination: trackSchemaFromEvent action - required fields 1`] = `
Array [
  Object {
    "appName": "unnamed Segment app",
    "appVersion": "unversioned",
    "createdAt": "pSOgGM!1GLRLe4w6",
    "eventHash": null,
    "eventId": null,
    "eventName": "pSOgGM!1GLRLe4w6",
    "eventProperties": Array [
      Object {
        "propertyName": "testType",
        "propertyType": "string",
      },
    ],
    "libPlatform": "Segment",
    "libVersion": "1.0.0",
    "messageId": "pSOgGM!1GLRLe4w6",
    "sessionId": "_",
    "type": "event",
  },
]
`;
